--- a/styles/style.css
+++ b/styles/style.css
@@ -193,7 +193,6 @@ body {
 .habits-all-section {
   width: 100%;
   margin-top: 100px;
-  color: white;
   & .habit-section {
     max-width: 1070px;
     margin: 0px auto;
@@ -240,6 +239,63 @@ body {
         letter-spacing: 0.3px;
         margin-top: 10px;
       }
+    }
+  }
+}
+
+/* Run an Extra Mile Easily */
+.run-all-section {
+  width: 100%;
+  margin-top: 100px;
+  color: white;
+
+  & .run-section {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1070px;
+    height: 370px;
+    margin: 0px auto;
+    padding: 50px;
+    border-radius: 18px;
+
+    background: rgb(34, 34, 34);
+  }
+  & .content {
+    width: 40%;
+    & h3 {
+      font-size: 3rem;
+      font-weight: 900;
+      line-height: 120%;
+      color: rgb(255, 255, 255);
+      margin-bottom: 14px;
+    }
+    & p {
+      color: rgba(255, 255, 255, 0.5);
+      letter-spacing: 0.3px;
+      line-height: 24px;
+      font-size: 14px;
+      font-weight: 400;
+      margin-bottom: 2rem;
+    }
+    & button {
+      width: 200px;
+      height: 54px;
+      border-radius: 42px;
+      background: rgb(230, 83, 60);
+      line-height: 22px;
+      font-weight: 600;
+      font-size: 1.2rem;
+      border: none;
+      outline: none;
+      color: #ffffff;
+    }
+  }
+  & .content-img {
+    width: 40%;
+    & img {
+      width: 365px;
+      height: 300px;
+      border-radius: 18px;
     }
   }
 }
@@ -355,6 +411,44 @@ body {
         & p {
           margin-bottom: 2rem;
         }
+      }
+    }
+  }
+
+  /* Run an Extra Mile Easily */
+
+  .run-all-section {
+    margin-top: 50px;
+    padding: 10px;
+    & .run-section {
+      flex-direction: column;
+      max-width: 100%;
+      height: 570px;
+    }
+    & .content {
+      width: 100%;
+      margin: 0px auto;
+      & h3 {
+        font-size: 2rem;
+        margin-bottom: 10px;
+      }
+      & p {
+        margin-bottom: 1rem;
+      }
+      & button {
+        width: 150px;
+        height: 40px;
+        border-radius: 40px;
+        font-size: 1rem;
+      }
+    }
+    & .content-img {
+      width: 100%;
+
+      & img {
+        margin-right: 70px;
+        width: 240px;
+        height: 200px;
       }
     }
   }
