--- a/styles/style.css
+++ b/styles/style.css
@@ -299,6 +299,174 @@ body {
     }
   }
 }
+/* calculator-all-section */
+.calculator-all-section {
+  width: 100%;
+  margin-top: 100px;
+  color: white;
+  & .calculator-section {
+    & .heading {
+      width: 670px;
+      margin: 0px auto;
+      & h3 {
+        color: rgb(255, 255, 255);
+        font-size: 3rem;
+        font-weight: 900;
+        line-height: 120%;
+      }
+      & p {
+        color: rgba(255, 255, 255, 0.5);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.3px;
+        margin-top: 14px;
+        margin-bottom: 80px;
+      }
+    }
+
+    & .body-calculate {
+      background-color: rgb(34, 34, 34);
+      display: flex;
+      gap: 50px;
+      gap: 20px;
+      & .bmi-calculation {
+        width: 1070px;
+        margin: 0px auto;
+        display: flex;
+
+        & .chart {
+          width: 45%;
+          & h3 {
+            padding: 30px;
+            color: rgb(255, 255, 255);
+            font-size: 28px;
+            font-weight: 900;
+            line-height: 120%;
+          }
+
+          & table {
+            border-collapse: collapse;
+            width: 70%;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+
+            & th {
+              border: 1px solid rgba(255, 255, 255, 0.1);
+              text-align: left;
+              padding: 10px;
+              font-size: 1rem;
+              font-weight: 500;
+              color: #ffffff;
+              line-height: 120%;
+            }
+
+            & td {
+              border: 1px solid rgba(255, 255, 255, 0.1);
+              padding: 10px;
+              color: rgba(255, 255, 255, 0.5);
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 120%;
+              text-align: left;
+            }
+          }
+        }
+        & .bmi {
+          width: 45%;
+          & h3 {
+            padding: 30px;
+            color: rgb(255, 255, 255);
+            font-size: 28px;
+            font-weight: 900;
+            line-height: 120%;
+          }
+          & p {
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0.3px;
+            text-align: left;
+            margin-left: 30px;
+            margin-bottom: 10px;
+            margin-top: -20px;
+          }
+          & form {
+            & .height-weight {
+              display: flex;
+              gap: 12px;
+              & .height,
+              .weight {
+                width: 280px;
+                height: 48px;
+                color: rgba(255, 255, 255, 0.6);
+                padding: 10px;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 22px;
+                letter-spacing: 0px;
+                text-align: left;
+                border-radius: 8px;
+                background: rgba(255, 255, 255, 0.1);
+                border: none;
+              }
+            }
+            & .age-sex {
+              display: flex;
+              gap: 12px;
+              & .age,
+              .sex {
+                width: 280px;
+                height: 48px;
+                color: rgba(255, 255, 255, 0.6);
+                padding: 10px;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 22px;
+                letter-spacing: 0px;
+                text-align: left;
+                border-radius: 8px;
+                background: rgba(255, 255, 255, 0.1);
+                border: none;
+                margin-top: 12px;
+              }
+            }
+            & .active-factor {
+              & .factor {
+                width: 485px;
+                height: 48px;
+                color: rgba(255, 255, 255, 0.6);
+                padding: 10px;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 22px;
+                letter-spacing: 0px;
+                text-align: left;
+                border-radius: 8px;
+                background: rgba(255, 255, 255, 0.1);
+                border: none;
+                margin-top: 12px;
+              }
+            }
+            & button {
+              width: 200px;
+              height: 50px;
+              margin-top: 30px;
+              color: rgb(255, 255, 255);
+              font-size: 18px;
+              font-weight: 600;
+              line-height: 22px;
+              border-radius: 42px;
+              border: none;
+              background: rgb(230, 83, 60);
+              margin-bottom: 40px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
 /* responsive small devices */
 @media screen and (max-width: 576px) {
@@ -447,8 +615,95 @@ body {
 
       & img {
         margin-right: 70px;
-        width: 240px;
+        width: 260px;
         height: 200px;
+      }
+    }
+  }
+  /* calculator-all-section */
+  .calculator-all-section {
+    margin-top: 50px;
+    padding: 10px;
+    margin-left: 10px;
+    width: 100%;
+    & .calculator-section {
+      & .heading {
+        width: 100%;
+        margin: 0px auto;
+        text-align: center;
+        & h3 {
+          font-size: 2rem;
+        }
+        & p {
+          margin-top: 14px;
+          margin-bottom: 30px;
+        }
+      }
+      & .body-calculate {
+        background-color: rgb(34, 34, 34);
+        display: flex;
+        gap: 20px;
+        & .bmi-calculation {
+          width: 100%;
+          margin: 0px auto;
+          display: flex;
+          flex-direction: column;
+
+          & .chart {
+            width: 100%;
+            & h3 {
+              padding: 10px;
+              font-size: 24px;
+            }
+            & table {
+              margin: 5px;
+              width: 100%;
+              & th {
+                padding: 5px;
+              }
+              & td {
+                padding: 5px;
+              }
+            }
+          }
+          & .bmi {
+            width: 80%;
+            & h3 {
+              padding: 20px;
+              font-size: 24px;
+              margin-bottom: 10px;
+            }
+            & form {
+              & .height-weight {
+                display: flex;
+                gap: 10px;
+                & .height,
+                .weight {
+                  margin-left: 20px;
+                  width: 100%;
+                }
+              }
+              & .age-sex {
+                display: flex;
+                gap: 12px;
+                & .age,
+                .sex {
+                  margin-left: 20px;
+                  width: 100%;
+                }
+              }
+              & .active-factor {
+                & .factor {
+                  width: 95%;
+                  margin-left: 20px;
+                }
+              }
+              & button {
+                margin-left: 20px;
+              }
+            }
+          }
+        }
       }
     }
   }
